# hse_someprojects

./: log_cleaner.sh  test_cleaner.sh
AC_OS/lab1/: CMakeLists.txt  client.cpp  server.cpp  wrappers.cpp  wrappers.h
AC_OS/lab2/: CMakeLists.txt  benchmark.cpp  concurrent_queue.h  filters.cpp  filters.h  main.cpp  parallel_filters.h  parallel_processor.cpp  parallel_processor.h  task.h
python/django/newsport/newsport/: settings.py
python/django/newsportal/: logout.html  profile.html  register.html  urls.py
python/django/newsportal/accounts/: forms.py  urls.py  views.py
python/django/newsportal/news/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
python/django/newsportal/newsportal/: asgi.py  settings.py  urls.py  wsgi.py
python/django/newsportal/templates/: base.html
python/django/newsportal/templates/accounts/: login.html
python/django/newsportal/templates/news/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  test.html
python/django/newsportal/templates/registration/: login.html  logout.html
